--- a/picklist_flutter/pubspec.yaml
+++ b/picklist_flutter/pubspec.yaml
@@ -28,6 +28,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # State management
+  provider: ^6.1.1
+  
+  # Local storage for PIN and session management
+  shared_preferences: ^2.2.2
+  
+  # UI components and styling
+  google_fonts: ^6.1.0
+  cached_network_image: ^3.3.1
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   flutter_test:
@@ -48,11 +59,13 @@ flutter_launcher_icons:
   remove_alpha_ios: true
 
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/picklist_logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
