--- a/picklist_server/package.json
+++ b/picklist_server/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "pg": "^8.11.3",
+    "jsonwebtoken": "^9.0.2"
   }
 }
